// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XAxis it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="0%"
      y2="0%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="25%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="25%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="25%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="0%"
      y2="0%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="15%"
          y="25%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="63.75%"
          x2="63.75%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="48.75000000000001%"
          y="25%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="97.50000000000001%"
          x2="97.50000000000001%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="82.5%"
          y="25%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="0%"
      x2="100%"
      y1="0%"
      y2="0%"
    />
    <g
      className="XAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="0%"
          y="25%"
        >
          0
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="45%"
          x2="45%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="45%"
          y="25%"
        >
          1
        </text>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="0%"
          y2="10%"
        />
        <text
          className="XAxis__TickLabels"
          stroke="black"
          x="90%"
          y="25%"
        >
          2
        </text>
      </g>
    </g>
  </svg>
</div>
`;
